Re-factor class loading code.